samples/_failures_safe/1761613420_03a81e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3798d8bd.c: In function ‘main’:
./samples/SAFE/__tmp_3798d8bd.c:162:14: error: expected ‘)’ at end of input
  162 |     if (fgets
      |        ~     ^
      |              )
./samples/SAFE/__tmp_3798d8bd.c:162:5: error: expected declaration or statement at end of input
  162 |     if (fgets
      |     ^~
